# Skity

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  _config.yml  about.md  index.md  package-lock.json  run_dev.sh  skity_config.h.in  update_bootstrap.sh
example/: CMakeLists.txt  clip_example.cc  example.cc  example_config.h.in  filter_example.cc  frame_example.cc  gl_clip_example.cc  gl_example.cc  gl_filter_example.cc  gl_frame_example.cc  gl_svg_example.cc  perf.cc  perf.hpp  svg_example.cc  vk_clip_example.cc  vk_example.cc  vk_filter_example.cc  vk_frame_example.cc  vk_svg_example.cc  vulkan_hello_world.cc
example/Android/: build.gradle  gradle.properties  settings.gradle
example/Android/app/: build.gradle
example/Android/gradle/wrapper/: gradle-wrapper.properties
example/gl/: gl_app.cc  gl_app.hpp
example/utils/: vk_app.cc  vk_app.hpp  vk_platform.hpp
example/utils/platform/: platform_glfw.cc  platform_glfw.hpp
example/utils/platform/osx/: platform_darwin.mm
example/utils/platform/win/: platform_win.cc
example/vk/: vk_app.cc  vk_app.hpp
example/vk_shaders/binary/: vk_demo_buffer_shader_frag.spv  vk_demo_buffer_shader_vert.spv  vk_demo_shader_frag.spv  vk_demo_shader_vert.spv
example/vk_shaders/src/: demo_buffer_shader.frag  demo_buffer_shader.vert  demo_shader.frag  demo_shader.vert
example/webgl/: minimal_webgl_examlpe.html  webgl_example.js
include/: CMakeLists.txt
include/skity/: config.hpp.in  macros.hpp  skity.hpp
include/skity/codec/: codec.hpp  data.hpp  pixmap.hpp
include/skity/effect/: mask_filter.hpp  path_effect.hpp  shader.hpp
include/skity/geometry/: geometry.hpp  point.hpp  rect.hpp  rrect.hpp
include/skity/gpu/: gpu_context.hpp  gpu_mtl_context.hpp  gpu_vk_context.hpp
include/skity/graphic/: bitmap.hpp  color.hpp  paint.hpp  path.hpp
include/skity/io/: data.hpp  pixmap.hpp
include/skity/render/: canvas.hpp
include/skity/svg/: svg_dom.hpp
include/skity/text/: text_blob.hpp  text_run.hpp  typeface.hpp  utf.hpp
module/codec/: CMakeLists.txt
module/codec/src/codec/: codec.cc  jpeg_codec.cc  png_codec.cc  png_codec.hpp
module/codec/test/: CMAkeLists.txt  jpeg_encode_test.cc  png_decode_test.cc
module/svg/: CMakeLists.txt
module/svg/src/svg/: svg_attribute.hpp  svg_attribute_parser.cc  svg_attribute_parser.hpp  svg_color_parser.cc  svg_color_parser.hpp  svg_container.cc  svg_container.hpp  svg_dom.cc  svg_node.cc  svg_node.hpp  svg_path.hpp  svg_render_context.hpp  (+4 more)
src/: CMakeLists.txt  logging.cc  logging.hpp
src/codec/: codec.cc  data.cc  jpeg_codec.cc  jpeg_codec.hpp  pixmap.cc  png_codec.cc  png_codec.hpp
src/effect/: dash_path_effect.cc  dash_path_effect.hpp  discrete_path_effect.cc  discrete_path_effect.hpp  gradient_shader.cc  gradient_shader.hpp  mask_filter.cc  path_effect.cc  pixmap_shader.cc  pixmap_shader.hpp  shader.cc
src/geometry/: conic.cc  conic.hpp  contour_measure.cc  contour_measure.hpp  geometry.cc  geometry.hpp  math.hpp  point_priv.hpp  quad_construct.cc  quad_construct.hpp  rect.cc  rrect.cc
src/geometry/tesselator/: mesh.cc  mesh.hpp
src/graphic/: bitmap.cc  color.cc  color_parser.cc  color_parser.hpp  paint.cc  path.cc  path_measure.cc  path_measure.hpp  path_priv.hpp
src/io/: data.cc  pixmap.cc
src/render/: canvas.cc  cap_proc.cc  cap_proc.hpp  draw.cc  draw.hpp  join_proc.cc  join_proc.hpp  path_raster.cc  path_raster.hpp  path_stroker.cc  path_stroker.hpp  path_vertex.cc  path_vertex.hpp  stroke.cc  stroke.hpp  texture_atlas.cc  texture_atlas.hpp
src/render/gl/: gl_canvas.cc  gl_canvas.hpp  gl_canvas2.cc  gl_canvas2.hpp  gl_draw_op.cc  gl_draw_op.hpp  gl_draw_op2.cc  gl_draw_op2.hpp  gl_fill.cc  gl_fill.hpp  gl_fill2.cc  gl_fill2.hpp  gl_glyph_raster_cache.cc  gl_glyph_raster_cache.hpp  gl_interface.cc  gl_interface.hpp  gl_mesh.cc  gl_mesh.hpp  gl_path_stroke.hpp  gl_path_visitor.cc  gl_path_visitor.hpp  gl_shader.cc  gl_shader.hpp  gl_stroke.cc  gl_stroke.hpp  gl_stroke2.cc  gl_stroke2.hpp  gl_stroke_aa.cc  gl_stroke_aa.hpp  gl_texture.cc  gl_texture.hpp  gl_vertex.cc  gl_vertex.hpp
src/render/hw/: hw_canvas.cc  hw_canvas.hpp  hw_canvas_state.cc  hw_canvas_state.hpp  hw_draw.cc  hw_draw.hpp  hw_font_texture.hpp  hw_geometry_raster.cc  hw_geometry_raster.hpp  hw_mesh.cc  hw_mesh.hpp  hw_path_raster.cc  hw_path_raster.hpp  hw_path_visitor.cc  hw_path_visitor.hpp  hw_pipeline.hpp  hw_render_target.cc  hw_render_target.hpp  hw_renderer.hpp  hw_shader.hpp  hw_texture.hpp
src/render/sw/: sw_canvas.cc  sw_canvas.hpp  sw_path_stroke.cc  sw_path_stroke.hpp  sw_raster.cc  sw_raster.hpp  sw_span_brush.cc  sw_span_brush.hpp  sw_subpixel.hpp
src/render/text/: font_texture.cc  font_texture.hpp  ft_library_wrap.cc  ft_library_wrap.hpp
src/render/wasm/: wasm_binding.cc  wasm_canvas.cc  wasm_gpu_context.hpp
src/svg/: svg_attribute.cc  svg_attribute.hpp  svg_attribute_parser.cc  svg_attribute_parser.hpp  svg_container.cc  svg_container.hpp  svg_dom.cc  svg_node.cc  svg_node.hpp  svg_path.cc  svg_render_context.cc  svg_render_context.hpp  svg_root.cc  svg_root.hpp  svg_shape.cc  svg_transformable_node.cc  svg_transformable_node.hpp  svg_types.hpp
src/text/: ft_library_wrap.cc  ft_library_wrap.hpp  text_blob.cc  text_run.cc  typeface.cc  utf.cc
src/utils/: lazy.hpp
src/xml/: xml_parser.cc  xml_parser.hpp
test/: CMakeLists.txt  canvas_aa_test.cc  cubic_fill_stencil_test.cc  fill_rule_test.cc  font_texture_test.cc  freetype_path_test.cc  geometry_test.cc  gl_canvas2_test.cc  gl_canvas_test.cc  gl_draw_op_test.cc  gl_path_mesh_test.cc  gl_path_stroke_mesh.cc  gl_texture_test.cc  hw_canvas_test.cc  math_test.cc  ms_paper_test.cc  path_measure_test.cc  path_raster_test.cc  path_test.cc  png_decode_test.cc  raw_gl_geometry_test.cc  raw_gl_render_test.cc  raw_gl_tessellation_test.cc  raw_linear_gradient_test.cc  shader_aa_test.cc  stroke_test.cc  svg_parser_test.cc  sw_canvas_test.cc  test_config.h.in  test_gl_fill2.cc  test_gl_stroke2.cc  textblob_test.cc  texture_atlas_test.cc
test/common/: test_common.cc  test_common.hpp
(+195 files in other folders)
